<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/walmart_logo" />

    <TextView
        android:id="@+id/lblCreate"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="65dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/sign_in_to_your_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCreate"
        android:layout_marginStart="64dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="64dp">

        <LinearLayout
            android:id="@+id/secLayout"
            android:layout_width="match_parent"
            android:layout_height="513dp"
            android:orientation="vertical"
            android:paddingStart="64dp"
            android:paddingTop="24dp"
            android:paddingEnd="64dp"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/lblRequired"
                android:layout_width="245dp"
                android:layout_height="35dp"
                android:gravity="center|start"
                android:text="@string/email_address_required"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtEmail"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:shadowColor="#8A8A8A"
                android:textAlignment="textStart"
                tools:ignore="RtlCompat,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/lblPass"
                android:layout_width="245dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:gravity="center|start"
                android:text="@string/password_required"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:shadowColor="#8A8A8A"
                android:textAlignment="textStart"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txtForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:autoLink="all"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:backgroundTint="#017DC4"
                android:gravity="center|center_horizontal"
                android:text="@string/sign_in"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/displaytxt"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_account"
                android:theme="@style/Button.White"
                android:textColor="#027DC2" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>